--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1437,6 +1437,11 @@ input, select, textarea {
 		margin-bottom: 2em;
 	}
 
+	/* MAILTO COLOR */
+	a[href^="mailto:"] {
+		color: #b87d83;
+	}
+
 /* Table */
 
 	table {
@@ -1766,6 +1771,65 @@ input, select, textarea {
 		.icon > .label {
 			display: none;
 		}
+
+/* Icons 2 */
+
+	ul.icons {
+		cursor: default;
+		list-style: none;
+		padding-left: 0;
+	}
+
+		ul.icons li {
+			display: inline-block;
+		}
+
+			ul.icons li:last-child {
+				padding-right: 0;
+			}
+
+			ul.icons li .icon {
+				-moz-transition: background-color 0.25s ease-in-out;
+				-webkit-transition: background-color 0.25s ease-in-out;
+				-ms-transition: background-color 0.25s ease-in-out;
+				transition: background-color 0.25s ease-in-out;
+				width: 2.25rem;
+				height: 2.25rem;
+				text-align: center;
+				line-height: 2.25rem;
+				border-radius: 2.25rem;
+				color: #b87d83;
+				display: inline-block;
+			}
+
+				ul.icons li .icon:before {
+					font-size: 1.25rem;
+				}
+
+				ul.icons li .icon:hover {
+					background-color: rgba(144, 144, 144, 0.1);
+				}
+			
+				ul.icons li .custom-icon {
+					width: 2.25rem;
+					height: 2.25rem;
+					display: inline-flex;
+					align-items: center;
+					justify-content: center;
+					border-radius: 2.25rem;
+					background-color: transparent;
+					transition: background-color 0.25s ease-in-out;
+				}
+				
+				ul.icons li .custom-icon:hover {
+					background-color: rgba(144, 144, 144, 0.1);
+				}
+				
+				ul.icons li .custom-icon .icon-img {
+					width: 1.1rem;
+					height: 1.1rem;
+					display: block;
+				}
 
 /* Nav */
 
@@ -2189,3 +2253,16 @@ input, select, textarea {
 			}
 
 		}
+
+/* Main section visitor count */
+
+#visitor-count {
+  position: absolute;
+  bottom: 1em;
+  left: 1em;
+  font-size: 0.75em;
+  letter-spacing: -0.015em;
+  margin: 0;
+  color: #888;
+  line-height: 1.25em;
+}
