--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1437,11 +1437,6 @@ input, select, textarea {
 		margin-bottom: 2em;
 	}
 
-	/* MAILTO COLOR */
-	a[href^="mailto:"] {
-		color: #b87d83;
-	}
-
 /* Table */
 
 	table {
@@ -1772,7 +1767,7 @@ input, select, textarea {
 			display: none;
 		}
 
-/* Icons 2 */
+/* Icons horizontal list (not in use, TODO: remove?) */
 
 	ul.icons {
 		cursor: default;
@@ -1809,6 +1804,8 @@ input, select, textarea {
 				ul.icons li .icon:hover {
 					background-color: rgba(144, 144, 144, 0.1);
 				}
+
+				/* Credly image icon (not in use, TODO: remove?) */
 			
 				ul.icons li .custom-icon {
 					width: 2.25rem;
@@ -1826,10 +1823,49 @@ input, select, textarea {
 				}
 				
 				ul.icons li .custom-icon .icon-img {
-					width: 1.1rem;
-					height: 1.1rem;
+					width: 1.05rem;
+					height: 1.05rem;
 					display: block;
 				}
+
+				/* Icon tooltips (not in use, TODO: remove?) */
+
+				.icon .tooltip {
+					visibility: hidden;
+					opacity: 0;
+					position: absolute;
+					background-color: #333;
+					color: #fff;
+					text-align: center;
+					border-radius: 4px;
+					padding: 0.3em 0.6em;
+					font-size: 0.75rem;
+					white-space: nowrap;
+					transform: translateX(-50%);
+					left: 50%;
+					top: calc(100% + 8px); /* 8px below the icon */
+					z-index: 10;
+					transition: opacity 0.2s ease-in-out;
+					pointer-events: none;
+				}
+				
+				.icon:hover .tooltip {
+					visibility: visible;
+					opacity: 1;
+				}
+
+				.icon .tooltip::after {
+					content: '';
+					display: block;
+					position: absolute;
+					top: -0.4em;
+					left: 50%;
+					margin-left: -0.6em;
+					border-bottom: solid 0.6em #222222;
+					border-left: solid 0.6em transparent;
+					border-right: solid 0.6em transparent;
+				}
+				
 
 /* Nav */
 
@@ -2254,7 +2290,8 @@ input, select, textarea {
 
 		}
 
-/* Main section visitor count */
+
+/* Home section visitor count */
 
 #visitor-count {
   position: absolute;
@@ -2265,4 +2302,65 @@ input, select, textarea {
   margin: 0;
   color: #888;
   line-height: 1.25em;
+}
+
+.panel#CV {
+  padding: 0;
+}
+
+.cv-panel {
+  display: flex;
+  flex-direction: row;
+  color: #fff;
+}
+
+.cv-left {
+  background-color: #b87d83;
+  width: 30%;
+  padding: 2rem;
+  color: #e0e0e0;
+}
+
+.cv-right {
+  background-color: #fff;
+  width: 70%;
+  padding: 2rem;
+  color: #333;
+}
+
+.title {
+	text-transform: uppercase;
+	font-weight: 600;
+	letter-spacing: 1px;
+	margin-bottom: 20px;
+	font-family: 'Poppins', sans-serif;
+}
+
+.contact-info ul {
+	position: relative;
+	padding-left: 10px;
+}
+
+.contact-info ul li {
+	position: relative;
+	list-style: none;
+	margin: 10px 0;
+}
+
+.contact-info ul li .icon {
+	display: inline-block;
+	width: 50px;
+	font-size: 25px;
+	text-align: center;
+	color: #b87d83;
+}
+
+.contact-info ul li span {
+	font-weight: 300;
+}
+
+
+/* URL COLOR */
+a[href] {
+	color: #b87d83;
 }
