--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2402,6 +2402,30 @@ input, select, textarea {
 }
 
 
+.contact-info ul {
+	position: relative;
+	padding-left: 10px;
+}
+
+.contact-info ul li {
+	position: relative;
+	list-style: none;
+	margin: 10px 0;
+}
+
+.contact-info ul li .icon {
+	display: inline-block;
+	width: 50px;
+	font-size: 25px;
+	text-align: center;
+	color: #b87d83;
+}
+
+.contact-info ul li span {
+	font-weight: 300;
+}
+
+
 /* URL COLOR */
 a[href] {
 	color: #b87d83;
