--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2215,14 +2215,14 @@ input, select, textarea {
   padding: 0;
 }
 
-.cv-panel {
+.cv {
   display: flex;
   flex-direction: row;
   color: #fff;
 }
 
 .cv-left {
-  background-color: #b87d83; /* maybe a lighter #003147 ? */
+  background-color: #3e7f89; /* maybe a lighter #003147 ? */
   width: 30%;
   padding: 2rem;
   color: #e0e0e0;
@@ -2238,14 +2238,13 @@ input, select, textarea {
 	order: 1;
 }
 
-.title.main { /* Not sure if I'm happy with this */
+.title.main {
 	text-transform: uppercase;
   font-weight: 600;
-	/*letter-spacing: 1px;*/
-	margin-bottom: 30px;
+	margin-bottom: 0.6em;
 	font-family: 'Poppins', sans-serif;
 	border-bottom: 1px solid #003147;
-	color: #b87d83;
+	color: #3e7f89;
 }
 
 .title.aside {
@@ -2262,10 +2261,10 @@ input, select, textarea {
 .education-entry {
   display: flex;
   justify-content: space-between;
-	font-size: 1.5rem;
+	font-size: 1em;
   gap: 1rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-top: 1em;
+  margin-bottom: 0.4em;
   align-items: flex-start;
 }
 
@@ -2277,9 +2276,9 @@ input, select, textarea {
 }
 
 .education-entry .icon {
-  margin-right: 0.4rem;
-  color: #b87d83;
-  font-size: 1.3rem; /* 1rem */
+  margin-right: 0.4em;
+  color: #3e7f89;
+  font-size: 0.9em;
 	line-height: 1;
 }
 
@@ -2303,12 +2302,12 @@ input, select, textarea {
 }
 
 .edu-row .icon {
-  color: #b87d83;
+  color: #3e7f89;
 }
 
 .icon-svg {
-  width: 1.3rem;
-  height: 1.3rem;
+  width: 0.9em;
+  height: 0.9em;
   margin-right: 0.4rem;
   margin-left: -0.1rem;
   vertical-align: middle;
@@ -2336,7 +2335,7 @@ input, select, textarea {
 
 .aside-section ul li {
   position: relative;
-  margin: 5px 0;
+  margin: 0.15em 0;
   padding-left: 0.1em;
   line-height: 1.4;
 }
@@ -2365,17 +2364,19 @@ input, select, textarea {
 }
 
 .main-section ul li {
-	margin-left: 40px;
+	margin-left: 1.3em;
 	font-size: 0.9em;
 	line-height: 1.5;
 }
 
 .outer-list {
-	padding-bottom: 2.5rem;
+	font-size: 1em;
+	padding-bottom: 1.5em;
 	border-bottom: 1px solid rgba(0, 49, 71, 0.25);
 }
 
 .outer-list.last {
+	padding-bottom: 0;
 	border-bottom: none;
 }
 
@@ -2385,15 +2386,21 @@ input, select, textarea {
   margin: 0;
 }
 
-.os-text {
+.text.main {
 	display: inline-block;
-	font-size: 1.3rem;
+	font-size: 0.8em;
 	align-items: center;
 	line-height: 1.3;
+	margin-bottom: 2em;
+}
+
+.text.personal {
+	font-size: 0.8em;
+	line-height: 1.2;
 }
 
 @media screen and (max-width: 980px) {
-  .cv-panel {
+  .cv {
     flex-direction: column;
   }
 
@@ -2451,103 +2458,3 @@ input, select, textarea {
 a[href] {
 	color: #b87d83;
 }
-
-
-/* Icons horizontal list (not in use, TODO: remove?) */
-
-ul.icons {
-	cursor: default;
-	list-style: none;
-	padding-left: 0;
-}
-
-	ul.icons li {
-		display: inline-block;
-	}
-
-		ul.icons li:last-child {
-			padding-right: 0;
-		}
-
-		ul.icons li .icon {
-			-moz-transition: background-color 0.25s ease-in-out;
-			-webkit-transition: background-color 0.25s ease-in-out;
-			-ms-transition: background-color 0.25s ease-in-out;
-			transition: background-color 0.25s ease-in-out;
-			width: 2.25rem;
-			height: 2.25rem;
-			text-align: center;
-			line-height: 2.25rem;
-			border-radius: 2.25rem;
-			color: #b87d83;
-			display: inline-block;
-		}
-
-			ul.icons li .icon:before {
-				font-size: 1.25rem;
-			}
-
-			ul.icons li .icon:hover {
-				background-color: rgba(144, 144, 144, 0.1);
-			}
-
-			/* Credly image icon (not in use, TODO: remove?) */
-		
-			ul.icons li .custom-icon {
-				width: 2.25rem;
-				height: 2.25rem;
-				display: inline-flex;
-				align-items: center;
-				justify-content: center;
-				border-radius: 2.25rem;
-				background-color: transparent;
-				transition: background-color 0.25s ease-in-out;
-			}
-			
-			ul.icons li .custom-icon:hover {
-				background-color: rgba(144, 144, 144, 0.1);
-			}
-			
-			ul.icons li .custom-icon .icon-img {
-				width: 1.05rem;
-				height: 1.05rem;
-				display: block;
-			}
-
-			/* Icon tooltips (not in use, TODO: remove?) */
-
-			.icon .tooltip {
-				visibility: hidden;
-				opacity: 0;
-				position: absolute;
-				background-color: #333;
-				color: #fff;
-				text-align: center;
-				border-radius: 4px;
-				padding: 0.3em 0.6em;
-				font-size: 0.75rem;
-				white-space: nowrap;
-				transform: translateX(-50%);
-				left: 50%;
-				top: calc(100% + 8px); /* 8px below the icon */
-				z-index: 10;
-				transition: opacity 0.2s ease-in-out;
-				pointer-events: none;
-			}
-			
-			.icon:hover .tooltip {
-				visibility: visible;
-				opacity: 1;
-			}
-
-			.icon .tooltip::after {
-				content: '';
-				display: block;
-				position: absolute;
-				top: -0.4em;
-				left: 50%;
-				margin-left: -0.6em;
-				border-bottom: solid 0.6em #222222;
-				border-left: solid 0.6em transparent;
-				border-right: solid 0.6em transparent;
-			}
