--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2355,6 +2355,11 @@ input, select, textarea {
   display: inline;
 }
 
+.aside-section ul li .text .skill {
+  font-weight: 400;
+  font-size: inherit;
+}
+
 .aside-section ul li a {
   font-size: 0.8em;
   font-weight: 300;
@@ -2365,7 +2370,7 @@ input, select, textarea {
 
 .main-section ul li {
 	margin-left: 1.3em;
-	font-size: 0.9em;
+	font-size: 0.85em;
 	line-height: 1.5;
 }
 
@@ -2392,11 +2397,14 @@ input, select, textarea {
 	align-items: center;
 	line-height: 1.3;
 	margin-bottom: 2em;
+	text-align: justify;
 }
 
 .text.personal {
+	display: block;
 	font-size: 0.9em;
 	line-height: 1.2;
+	text-align: justify;
 }
 
 @media screen and (max-width: 980px) {
