--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2208,6 +2208,12 @@ input, select, textarea {
   line-height: 1.25em;
 }
 
+@media (max-width: 980px) {
+  #visitor-counter {
+    display: none;
+  }
+}
+
 
 /* CV section */
 
@@ -2324,7 +2330,7 @@ input, select, textarea {
 
 .degree-text {
 	display: inline-block;
-	font-size: inherit;
+	font-size: 0.95em;
 	line-height: 1.2;
 }
 
@@ -2451,6 +2457,7 @@ input, select, textarea {
 	position: relative;
 	list-style: none;
 	margin: 0.35em 0;
+	flex-wrap: nowrap;
 }
 
 .contact-info ul li .icon {
