--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
+	background-color: #e4b1a0;
 }
 
 ol, ul {
@@ -2382,13 +2383,6 @@ input, select, textarea {
 
 .outer-list {
 	font-size: 1em;
-	padding-bottom: 1.5em;
-	border-bottom: 1px solid rgba(0, 49, 71, 0.25);
-}
-
-.outer-list.last {
-	padding-bottom: 0;
-	border-bottom: none;
 }
 
 .outer-list ul {
