feat: normalize certificate image sizes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,6 +77,8 @@ const certs = [
     </Fragment>
   </Hero2>
 
+  <!-- TODO: include button to open PDF CV on a new tab -->
+
   <!-- Scroll animation -->
 
   <LottiePlayer
